# Orbit

./: .gitignore  CMakeLists.txt  CMakePresets.json  mingw64.cmake  readme.txt
config/: configFile.txt  configFile_SunEarthMoon.txt  configFile_stableOrbit_symmetric.txt  readMe.txt
inc/: c_draw.hpp  c_orbit.hpp  config.hpp  utils.hpp  window_handling.hpp
src/: c_orbit.cpp  config.cpp  main.cpp  window_handling.cpp
